@@ -1,5 +1,5 @@
 #!/bin/sh
 
-export JAVA_OPTS="-Xmx768M -Dfile.encoding=UTF-8 -Dwflow.home=./wflow/ -javaagent:./wflow/aspectjweaver-1.9.22.jar"
+export JAVA_OPTS="-Xmx768M -Dfile.encoding=UTF-8 --add-opens=java.base/java.nio=ALL-UNNAMED -Dwflow.home=./wflow/ -javaagent:./wflow/aspectjweaver-1.9.22.jar"
 
-apache-tomcat-9.0.90/bin/catalina.sh $*
+apache-tomcat-11.0.0/bin/catalina.sh $*
